# Simple_CLI

./: .gitignore  CMakeLists.txt  Readme.md  cli_command_set.c  cli_command_set.h  simple_cli.c  simple_cli.h
Lib/: CMakeLists.txt  simple_cli.c  simple_cli.h
Test/: cli_command_set.c  cli_command_set.h  main.c
src/: CMakeLists.txt
